# comau_robots_ros2

./: README.md
nj-220-27_description/: CMakeLists.txt  package.xml
nj-220-27_description/launch/: display.launch  gazebo.launch  nj-220-27_upload.launch
nj-220-27_description/meshes/: Link1.stl  Link2.stl  Link2_1.stl  Link2_2.stl  Link2_3.stl  Link2_4.stl  Link2_5.stl  Link2_6.stl  Link2_7.stl  Link3.stl  Link4.stl  Link5.stl  Link6.stl  base_link.stl  blade.scene  puntone.stl  puntone_simp.stl
nj-220-27_description/robots/: nj-220-27_robot.urdf.xacro
nj-220-27_description/urdf/: environment.xacro.bck  gripper.xacro  nj-220-27.xacro  nj-220-27.xacro.urdf  nj-220-27_robot.xacro  nj-220-27_ros2_control.xacro  nj-220-27_transmission.xacro
nj-220-27_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
nj-220-27_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  nj-220-27.ros2_control.xacro  nj-220-27.srdf
nj-220-27_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
nj-220-27_moveit_configs/: CMakeLists.txt  package.xml
nj-220-27_moveit_configs/config/: joint_limits.yaml  nj-220-27.urdf.xacro
nj-220-27_moveit_configs/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  (+3 more)
nj_220_2_7_description/: CMakeLists.txt  package.xml
nj_220_2_7_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+21 files in other folders)
