<?xml version="1.0"?>
<package format="2">
  <name>nj-220-27_description</name>
  <version>0.0.0</version>
  <description>The nj_220_2_7_description package</description>
  
  <maintainer email="m.delledonne002@unibs.it">Michele Delledonne</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
